# Dyngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
AssetLoader/: CMakeLists.txt
Buffer/: CMakeLists.txt
Buffer/public/Buffer/: AbstractDataReadBuffer.hpp  AbstractDataWriteBuffer.hpp  BufferExcept.hpp  DataReadBuffer.hpp  DataWriteBuffer.hpp  FileDataReadBuffer.hpp  FileDataWriteBuffer.hpp  MemoryDataBuffer.hpp
Buffer/src/: AbstractDataReadBuffer.cpp  AbstractDataWriteBuffer.cpp  BufferExcept.cpp  FileDataReadBuffer.cpp  FileDataWriteBuffer.cpp  MemoryDataBuffer.cpp
Dpac/: CMakeLists.txt
Dpac/public/Dpac/: Dpac.hpp
Dpac/src/: Dpac.cpp
Dpac/tests/: DpacArchiveTest.cpp
DpacTools/: CMakeLists.txt
DpacTools/src/: DpacDeflate.cpp  DpacGet.cpp  DpacList.cpp
Editor/: CMakeLists.txt
Editor/private/Editor/Input/: QtInputProvider.hpp
Editor/private/Editor/Project/: ProjectState.hpp
Editor/private/Editor/Ui/: EditorUiController.hpp  ViewportController.hpp
Editor/src/Editor/: main.cpp
Editor/src/Editor/Input/: QtInputProvider.cpp
Editor/src/Editor/Project/: ProjectState.cpp
Editor/src/Editor/Ui/: EditorUiController.cpp  ViewportController.cpp
Editor/ui/: editorwindow.ui
Engine/: CMakeLists.txt
Engine/private/: Dyngine_internal.hpp
Engine/private/Asset/: Asset.hpp  AssetLoader.hpp  AssetRenderer.hpp
Engine/private/Camera/: Camera.hpp  PerspectiveCamera.hpp
Engine/private/Camera/Controller/: FlyingPerspectiveCameraController.hpp
Engine/private/Dyngine/: EngineRenderContextState.hpp  EngineRenderTargetState.hpp  EngineState.hpp
Engine/private/Dyngine/Rendering/Scene/: Scene.hpp  SceneRenderer.hpp
Engine/private/Dyngine/Rendering/Shader/: ShaderCache.hpp  ShaderUtil.hpp
Engine/private/Mesh/: Mesh.hpp  MeshRenderer.hpp
Engine/private/Rendering/: MeshRenderer.hpp
Engine/private/Rendering/Asset/: Asset.hpp  AssetLoader.hpp  AssetRenderer.hpp
Engine/private/Rendering/Camera/Controller/: FlyingPerspectiveCameraController.hpp
Engine/private/Rendering/Mesh/: Mesh.hpp  MeshRenderer.hpp
Engine/private/Rendering/Scene/: Scene.hpp  SceneRenderer.hpp
Engine/private/Rendering/Scene/Asset/: Asset.hpp  AssetLoader.hpp  AssetRenderer.hpp
Engine/private/Rendering/Scene/Camera/: Camera.hpp
Engine/private/Shader/: ShaderCache.hpp  ShaderUtil.hpp
Engine/public/Dyngine/: Dyngine.hpp  EngineRenderContext.hpp  EngineRenderTarget.hpp
Engine/public/Dyngine/Input/: Input.hpp  InputListener.hpp  InputProvider.hpp
Engine/resources/: test.dasset  test.glb
Engine/shaders/pbr/: pbr.frag.glsl  pbr.vert.glsl
Engine/shaders/textured/: textured.frag.glsl  textured.vert.glsl
Engine/shaders/triangle/: triangle.frag.glsl  triangle.vert.glsl
Engine/shaders/untextured/: untextured.frag.glsl  untextured.vert.glsl
Engine/src/: main.cpp
Engine/src/Asset/: Asset.cpp  AssetLoader.cpp  AssetRenderer.cpp  AssetRenderer.hpp
Engine/src/Camera/: PerspectiveCamera.cpp  PerspectiveCamera.hpp
Engine/src/Camera/Controller/: FlyingPerspectiveCameraController.cpp
Engine/src/Camera/controller/: FlyingPerspectiveCameraController.cpp  FlyingPerspectiveCameraController.hpp
Engine/src/Dyngine/: Dyngine.cpp  EngineRenderContext.cpp  EngineRenderContextState.cpp  EngineRenderTarget.cpp  EngineRenderTargetState.cpp  EngineState.cpp
Engine/src/Dyngine/Input/: Input.cpp  InputProvider.cpp
Engine/src/Mesh/: Mesh.cpp  MeshRenderer.cpp
Engine/src/Rendering/: MeshRenderer.cpp
Engine/src/Rendering/Asset/: Asset.cpp  AssetLoader.cpp  AssetRenderer.cpp
Engine/src/Rendering/Camera/: PerspectiveCamera.cpp
Engine/src/Rendering/Material/: Material.cpp
Engine/src/Rendering/Mesh/: Mesh.cpp  MeshRenderer.cpp
Engine/src/Rendering/Scene/: Scene.cpp  SceneRenderer.cpp
Engine/src/Rendering/Shader/: ShaderCache.cpp  ShaderUtil.cpp
Engine/src/Shader/: ShaderCache.cpp  ShaderUtil.cpp  ShaderUtil.hpp
FileFormats/DAsset/: CMakeLists.txt
FileFormats/DAsset/public/DAsset/: Asset.hpp  DAsset.hpp
FileFormats/DAsset/src/: Asset.cpp  DAsset.cpp
FileFormats/DAssetTools/: CMakeLists.txt
FileFormats/DAssetTools/src/: DAssetConvert.cpp  DAssetPrint.cpp
FileFormats/DShader/: CMakeLists.txt
FileFormats/DShader/public/DShader/: DShader.hpp
FileFormats/DShader/src/: DShader.cpp
FileFormats/DpacTools/: CMakeLists.txt
FileFormats/DpacTools/src/: DpacDeflate.cpp  DpacGet.cpp
InputOutput/: CMakeLists.txt
InputOutput/private/: zstd.h
InputOutput/public/Stream/: AbstractDataReadStream.hpp  AbstractDataWriteStream.hpp  DataReadStream.hpp  DataWriteStream.hpp  FileDataReadStream.hpp  FileDataWriteStream.hpp  MemoryDataStream.hpp  StreamExcept.hpp  ZstdDeflateStream.hpp
InputOutput/src/: AbstractDataReadStream.cpp  AbstractDataWriteStream.cpp  FileDataReadStream.cpp  FileDataWriteStream.cpp  MemoryDataStream.cpp  ZstdDeflateStream.cpp
InputOutput/testfiles/: bigger_test.txt
InputOutput/tests/: AbstractDataReadStreamTest.cpp  FileDataReadStreamTest.cpp  MemoryReadStreamTest.cpp
RenderLib/: CMakeLists.txt
RenderLib/src/main/: BufferObject.cpp  CommandBuffer.cpp  FrameBuffer.cpp  GraphicsPipeline.cpp  RenderContext.cpp  ShaderUtil.cpp  VertexFormat.cpp
RenderLib/src/vulkan/: BufferObjectVulkan.cpp  CommandBufferVulkan.cpp  ContextManagementVulkan.cpp  FrameBufferVulkan.cpp  GLFWWindow.cpp  GraphicsPipeline.cpp  GraphicsPipelineVulkan.cpp  RenderContextVulkan.cpp  ShaderUtilVulkan.cpp
Stream/: CMakeLists.txt
Stream/public/Stream/: AbstractDataReadStream.hpp  AbstractDataWriteStream.hpp  DataReadStream.hpp  DataWriteStream.hpp  FileDataReadStream.hpp  FileDataWriteStream.hpp  MemoryDataStream.hpp  ZstdDeflateStream.hpp  ZstdInflateStream.hpp
Stream/src/: AbstractDataReadStream.cpp  AbstractDataWriteStream.cpp  FileDataReadStream.cpp  FileDataWriteStream.cpp  MemoryDataStream.cpp  StreamExcept.cpp  ZstdDeflateStream.cpp  ZstdInflateStream.cpp
Stream/tests/: AbstractDataReadStreamTest.cpp  FileDataReadStreamTest.cpp  MemoryReadStreamTest.cpp  ZstdStreamTest.cpp
Utils/: CMakeLists.txt
Utils/public/Utils/: FileUtils.hpp
Utils/src/: FileUtils.cpp
(+101 files in other folders)
